# internet-speed-tracker

./: README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
internet_speed_tracker/: enums.py  main.py  speed_test.py
tests/features/: speedtest.feature
tests/features/steps/: speedtest_steps.py
